--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "testAll": "jest"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
     "xlsx": "^0.17.4"
   },
   "devDependencies": {
+    "jest": "^27.3.1",
     "nodemon": "^2.0.15"
   }
 }
