--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^6.13.0",
     "fast-csv": "^4.3.6",
     "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.3.3",
     "pg": "^8.7.1",
     "pg-format": "^1.0.4",
     "sequelize": "^6.4.0",
